fixing some layout issues for mobile view and updating social icons to retina images.

--- a/ucomm/css/contentpage-responsive.css
+++ b/ucomm/css/contentpage-responsive.css
@@ -60,6 +60,10 @@
   #footer p.copyright {
     padding-top: 25px;
   }
+  /* Global Footer and Copyright*/
+  #global-footer p.copyright {
+    padding: 15px 0;
+  }
 }
 @media (max-width: 991px) {
   .container {
