--- a/ucomm/less/base-responsive.less
+++ b/ucomm/less/base-responsive.less
@@ -71,6 +71,12 @@ body {
     padding-top: 25px;
   }
 } // #footer
+/* Global Footer and Copyright*/
+  #global-footer {
+    p.copyright {
+      padding: 15px 0;
+    }
+  }
 } // @media (max-width: @screen-xs-max)
 
 //////////////////////////
