--- a/ucomm/less/contentpage.less
+++ b/ucomm/less/contentpage.less
@@ -64,7 +64,8 @@ dd {
     
     ul {
       padding-left: 0;
-      list-style: none;  
+      list-style: none;
+      margin-bottom: 30px;  
       
       li {
         border-bottom: 1px solid @su-beige-30;
