--- a/ucomm/less/homepage-responsive.less
+++ b/ucomm/less/homepage-responsive.less
@@ -82,9 +82,7 @@
     h3 {
       margin-top: 0;
       line-height: 1;
-    }
-    p {
-      font-size: 1.1em;
+      font-size: 18px;
     }
   } // .news-text
 } // .news-item
