--- a/ucomm/less/homepage.less
+++ b/ucomm/less/homepage.less
@@ -257,6 +257,9 @@
     }
   }
 
+  img {
+    width: 33px;
+  }
   a:hover img {
     opacity: 0.6;
     .transition(all 0.4s ease-in-out);
